tests/nonsmoke/functional/CompileTests/Cxx17_tests/test2018_59.C
enum class byte : unsigned char
   {
   };
// const byte& r = { 42 }; // error
struct A { byte b; };
